--- a/oms_map/template.css
+++ b/oms_map/template.css
@@ -86,7 +86,7 @@ div.newsflash { padding-left:20px  !important; padding-right:20px !important;}
 
 
 #outage {float:none; width:100%; display:block; margin-bottom:0px;}
-#outage-map {float:none; width:100%; display:block; margin-bottom:40px;}
+#outage-map {float:none; width:100%; display:block; margin-bottom:40px; overflow: scroll;}
 
 
 /* #outage {float:left; width:60%; margin-right:40px !important}
@@ -8959,7 +8959,7 @@ padding:8px 20px 11px 20px !important;
 
 #outage-wrapper { margin:0px auto; max-width:100vw; padding-left:20px !important; padding-right:20px !important}
 #outage {float:none !important; width:100% !important; margin-right:00px !important}
-#outage-map {float:none !important; width:100% !important; margin-bottom:40px !important}
+#outage-map {float:none !important; width:100% !important; margin-bottom:40px !important; overflow: scroll;}
 
 }
 
@@ -8970,7 +8970,7 @@ padding:8px 20px 11px 20px !important;
 	width:100% !important; 
 	margin-right:00px !important;
 }
-#outage-map {float:none !important; width:100% !important; margin-bottom:40px !important}
+#outage-map {float:none !important; width:100% !important; margin-bottom:40px !important; overflow: scroll;}
 .f1 {float:none !important; max-width:100% !important; padding-right:0px !important;}
 .f2{float:none !important; max-width:100% !important; padding-left:0px !important; padding-right:0px !important;}	
 .f3 {float:none !important; max-width:100% !important; padding-left:0px !important;}
